// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreetLayoutGenerator create street layout nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -250,
      "y": 2,
      "z": -245.5,
    },
    "isLeaf": true,
    "length": 10,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -250,
      "y": 2,
      "z": -240.5,
    },
    "path": "/root",
    "visible": undefined,
    "width": 0,
    "x0": 0,
    "y0": 2,
    "z0": 0,
  },
]
`;

exports[`StreetLayoutGenerator create street layout nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -245,
      "y": 2,
      "z": -245.25,
    },
    "isLeaf": true,
    "length": 9,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -245,
      "y": 2,
      "z": -240.75,
    },
    "path": "/root/big leaf",
    "visible": undefined,
    "width": 9,
    "x0": 0.5,
    "y0": 2.5,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -245,
      "y": 2,
      "z": -235.5,
    },
    "isLeaf": false,
    "length": 10,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -245,
      "y": 2,
      "z": -230.5,
    },
    "path": "/root",
    "visible": undefined,
    "width": 10,
    "x0": 0,
    "y0": 12,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -250,
      "y": 2,
      "z": -227.75,
    },
    "isLeaf": true,
    "length": -1,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -250,
      "y": 2,
      "z": -228.25,
    },
    "path": "/root/Parent Leaf",
    "visible": undefined,
    "width": -1,
    "x0": 0.5,
    "y0": 22.5,
    "z0": 0,
  },
]
`;

exports[`StreetLayoutGenerator create street layout nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -245,
      "y": 2,
      "z": -241.4061741596076,
    },
    "isLeaf": true,
    "length": 9,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -245,
      "y": 2,
      "z": -236.9061741596076,
    },
    "path": "/root/big leaf",
    "visible": undefined,
    "width": 9,
    "x0": 0.5,
    "y0": 6.343825840392416,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -233.81669986732962,
      "y": 2,
      "z": -245.65834993366482,
    },
    "isLeaf": true,
    "length": 7.366600265340756,
    "link": undefined,
    "markingColor": null,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -233.81669986732962,
      "y": 2,
      "z": -241.97504980099444,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": undefined,
    "width": 7.366600265340756,
    "x0": 12.500000000000002,
    "y0": 2.5,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -232.3720125221851,
      "y": 2,
      "z": -238.01409334089632,
    },
    "isLeaf": true,
    "length": 4.477225575051661,
    "link": undefined,
    "markingColor": null,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -232.3720125221851,
      "y": 2,
      "z": -235.7754805533705,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": undefined,
    "width": 4.477225575051661,
    "x0": 15.389374690289095,
    "y0": 10.866600265340756,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -224.63339973465924,
      "y": 2,
      "z": -244.53904353990188,
    },
    "isLeaf": false,
    "length": 13.843825840392416,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -224.63339973465924,
      "y": 2,
      "z": -237.61713061970568,
    },
    "path": "/root/Parent Leaf",
    "visible": undefined,
    "width": 10,
    "x0": 20.366600265340757,
    "y0": 2,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -219.63339973465924,
      "y": 2,
      "z": -233.9061741596076,
    },
    "isLeaf": true,
    "length": -1,
    "link": undefined,
    "markingColor": null,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": -219.63339973465924,
      "y": 2,
      "z": -234.4061741596076,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": undefined,
    "width": -1,
    "x0": 30.866600265340757,
    "y0": 16.343825840392416,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "incomingEdgePoint": Vector3 {
      "x": -242.40834993366482,
      "y": 2,
      "z": -229.1561741596076,
    },
    "isLeaf": false,
    "length": 10,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -227.22504980099444,
      "y": 2,
      "z": -229.1561741596076,
    },
    "path": "/root",
    "visible": undefined,
    "width": 30.366600265340757,
    "x0": 0,
    "y0": 15.843825840392416,
    "z0": 0,
  },
]
`;
